<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="kr.co.triggers.yolo.util.Converter"/>

        <variable name="user" type="kr.co.triggers.yolo.domain.User"/>

    </data>

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <LinearLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/app_background_color"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/buttonBack"
                    android:layout_width="@dimen/toolbar_command_size"
                    android:layout_height="@dimen/toolbar_command_size"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/toolbar_command_margin"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/profile"
                    android:textAlignment="center"
                    android:textAppearance="@style/AppTheme.TextAppearance.Subtitle" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/content_padding">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/app_background_color"
                    app:cardCornerRadius="@dimen/cardview_radius">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="24dp"
                        android:paddingBottom="24dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="16dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/imageViewUserProfile"
                            android:layout_width="@dimen/user_profile_thumbnail_size"
                            android:layout_height="@dimen/user_profile_thumbnail_size"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="20dp"
                            android:src="@mipmap/ic_launcher"
                            app:civ_border_color="@color/color_primary_blue"
                            app:civ_border_width="1dp"/>

                        <ImageView
                            android:id="@+id/imageViewGender"
                            android:layout_width="@dimen/button_size_secondary"
                            android:layout_height="@dimen/button_size_secondary"
                            android:layout_toRightOf="@id/imageViewUserProfile"
                            android:layout_centerVertical="true"
                            android:src="@mipmap/ic_launcher"/>

                        <ImageView
                            android:id="@+id/divider_left"
                            android:layout_width="wrap_content"
                            android:layout_height="36dp"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@id/imageViewGender"
                            android:paddingLeft="12dp"
                            android:paddingRight="12dp"
                            android:src="@drawable/drawable_separator_normal"/>

                        <LinearLayout
                            android:id="@+id/layoutBirth"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:includeFontPadding="false"
                                android:text="@string/placeholder_user_birth"
                                android:textAppearance="@style/AppTheme.TextAppearance.Legend"/>

                            <android.support.v4.widget.Space
                                android:layout_width="match_parent"
                                android:layout_height="4dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:includeFontPadding="false"
                                android:text="@{Converter.getBirth(user.birth)}"
                                android:textAppearance="@style/AppTheme.TextAppearance.Content"/>

                        </LinearLayout>


                        <ImageView
                            android:id="@+id/divider_right"
                            android:layout_width="wrap_content"
                            android:layout_height="36dp"
                            android:layout_centerVertical="true"
                            android:layout_toLeftOf="@id/layoutBirth"
                            android:paddingLeft="12dp"
                            android:paddingRight="12dp"
                            android:src="@drawable/drawable_separator_normal"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toLeftOf="@id/divider_right"
                            android:layout_toRightOf="@id/divider_left"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:includeFontPadding="false"
                                android:text="@string/placeholder_user_name"
                                android:textAppearance="@style/AppTheme.TextAppearance.Legend"/>

                            <android.support.v4.widget.Space
                                android:layout_width="wrap_content"
                                android:layout_height="4dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:includeFontPadding="false"
                                android:text="@{user.name}"
                                android:textAppearance="@style/AppTheme.TextAppearance.Content"/>

                        </LinearLayout>

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/content_space" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/app_background_color"
                    app:cardCornerRadius="@dimen/cardview_radius">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/placeholder_user_preferences"
                            android:textAppearance="@style/AppTheme.TextAppearance.Legend"/>

                        <me.kaede.tagview.TagView
                            android:id="@+id/tagViewInformation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            app:textPaddingTop="@dimen/tag_inner_padding_updown"
                            app:textPaddingBottom="@dimen/tag_inner_padding_updown"
                            app:textPaddingLeft="@dimen/tag_inner_padding_side"
                            app:textPaddingRight="@dimen/tag_inner_padding_side"/>

                        <android.support.v4.widget.Space
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/card_content_space" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/content_space" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/app_background_color"
                    app:cardCornerRadius="@dimen/cardview_radius">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.design.widget.TabLayout
                            android:id="@+id/tabLayout"
                            android:layout_width="match_parent"
                            android:layout_height="?attr/actionBarSize"
                            app:tabSelectedTextColor="@color/color_primary_blue"
                            app:tabTextColor="@android:color/darker_gray">

                            <android.support.design.widget.TabItem
                                android:id="@+id/tabItemArtists"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tab_item_artists"/>

                            <android.support.design.widget.TabItem
                                android:id="@+id/tabItemTracks"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tab_item_tracks"/>

                            <android.support.design.widget.TabItem
                                android:id="@+id/tabItemFiesta"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tab_item_fiesta" />

                        </android.support.design.widget.TabLayout>

                        <android.support.v4.view.ViewPager
                            android:id="@+id/viewPagerContents"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</layout>